spec/error_then_without_else.expected
spec/error_then_without_else.kex:3:23: error: Expected 'else' after 'then', got Newline
Aborted: fix syntax errors before running.
